Work from beth (#368)
* Reordering metrics to put common ones first
* Changes and additions to text to clarify FIRM and its behaviour.
* Removed reference to varying H in results as being difficult to interpret (better for readers to get that info in Elementary Scores explanation further down).
* Various corrections to capitalisation of the Flip-Flop Index (#359)
* Update link text for binary categorical scores

---------

Signed-off-by: Beth Ebert <beth.ebert@bom.gov.au>
Signed-off-by: Nicholas Loveday <48701367+nicholasloveday@users.noreply.github.com>
Co-authored-by: Beth Ebert <beth.ebert@bom.gov.au>
Co-authored-by: Nicholas Loveday <48701367+nicholasloveday@users.noreply.github.com>
Co-authored-by: Nicholas Loveday <nicholasloveday@gmail.com>

--- a/tutorials/Diebold_Mariano_Test_Statistic.ipynb
+++ b/tutorials/Diebold_Mariano_Test_Statistic.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Confidence Intervals using statistical tests\n",
+    "# Confidence intervals using statistical tests\n",
     "Confidence intervals are crucial in verification for quantifying uncertainty. They are \n",
     "often used when testing if one forecast system is better than another."
    ]
@@ -22,13 +22,13 @@
     "Since then, there have been several modifications to the original test statistic, two of \n",
     "which we have implemented in `scores`. They are\n",
     "\n",
-    "- the Harvey, Leybourne and Newbold (1997) modification.\n",
-    "- the Hering and Genton (2011) modification.\n",
+    "- the Harvey, Leybourne and Newbold (1997) modification\n",
+    "- the Hering and Genton (2011) modification\n",
     "\n",
     "Both methods use a different technique for estimating the spectral density of\n",
     "the timeseries of differences at frequency 0, compared with Diebold and Mariano (1995). \n",
-    "The HLN method uses an improved and less biased estimate (see V_hat (see Equation (5) in \n",
-    "Harvey et al., 1997)). However, this estimate can sometimes be nonpositive, in which \n",
+    "The HLN method uses an improved and less biased estimate (see V_hat, Equation (5) in \n",
+    "Harvey et al. 1997). However, this estimate can sometimes be nonpositive, in which \n",
     "case NaN is returned.\n",
     "\n",
     "The HG method estimates the spectral density component using an exponential model\n",
@@ -36,25 +36,25 @@
     "Hering and Genton (2011) fit model parameters using empirical autocovariances\n",
     "computed up to half of the maximum lag. In this implementation, empirical\n",
     "autocovariances are computed up to half of the maximum lag or a lag of `h`,\n",
-    "whichever is larger. Model parameters are computed using\n",
-    "`scipy.optimize.least_squares`. It is assumed that the two model parameters (sigma\n",
-    "and theta, in the notation of Hering and Genton (2011)) are positive.\n",
+    "whichever is larger. The two model parameters (sigma\n",
+    "and theta, in HG's notation) are assumed to be positive and are computed using\n",
+    "`scipy.optimize.least_squares`.\n",
     "\n",
     "**Why use the DM test?**\n",
     "\n",
-    "Unlike many other statistical tests, for the DM test statistic:\n",
+    "Unlike many other statistical tests, the DM test statistic\n",
     "\n",
-    "- Forecast errors do not need to be Gaussian\n",
-    "- Scores can be serially correlated\n",
+    "- does not assume that forecast errors are normally distributed,\n",
+    "- accounts for scores that are serially correlated.\n",
     "\n",
-    "For instance there is likely to be some correlation between a lead day x forecast issued \n",
-    "on day i, and a lead day x forecast issued on day i + 1. The DM statistic handles this \n",
+    "For instance, there is likely to be some correlation between a lead day *x* forecast issued \n",
+    "on day *i*, and a lead day *x* forecast issued on day *i* + 1. The DM statistic handles this \n",
     "serial correlation using the autocorrelation function.\n",
     "\n",
     "### References \n",
-    "- Diebold, F.X. and Mariano, R.S. (1995) Comparing predictive accuracy. Journal of Business and Economic Statistics, 13, 253-263.\n",
-    "- Harvey, Leybourne and Newbold, 'Testing the equality of prediction mean squared errors', International Journal of Forecasting 13 (1997), 281-291.\n",
-    "- Hering and Genton, 'Comparing spatial predictions', Technometrics 53 no. 4 (2011), 414-425."
+    "- Diebold, F.X. and Mariano, R.S. (1995). Comparing predictive accuracy. *Journal of Business and Economic Statistics*, **13**, 253-263.\n",
+    "- Harvey, Leybourne and Newbold (1997). Testing the equality of prediction mean squared errors, *International Journal of Forecasting*, **13**, 281-291.\n",
+    "- Hering and Genton (2011). Comparing spatial predictions, *Technometrics*, **53**, 414-425."
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We calculate the MSE for our two forecast systems"
+    "We next calculate the MSE for our two forecast systems."
    ]
   },
   {
@@ -134,24 +134,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the DM test stat, we need to define what our value for `h` is for our timeseries. \n",
-    "To determine the value of h for each timeseries of score differences of h-step ahead\n",
-    "forecasts, one may ask 'How many observations of the phenomenon will be made between\n",
-    "making the forecast and having the observation that will validate the forecast?'\n",
+    "For the DM test statistic, we need to define the value of lag `h` for our timeseries. \n",
+    "For each timeseries of score differences of h-step ahead\n",
+    "forecasts, we ask, \"How many observations of the phenomenon will be made between\n",
+    "making the forecast and having the observation that will validate the forecast?\"\n",
+    "\n",
     "For example, suppose that the phenomenon is afternoon precipitation accumulation in\n",
-    "New Zealand (00z to 06z each day). Then a Day+1 forecast issued at 03z on Day+0 will\n",
-    "be a 2-ahead forecast, since Day+0 and Day+1 accumulations will be observed before\n",
-    "the forecast can be validated. On the other hand, a Day+1 forecast issued at 09z on\n",
-    "Day+0 will be a 1-step ahead forecast. The value of h for each timeseries in the\n",
-    "array needs to be specified in one of the sets of coordinates.\n",
+    "New Zealand (00 UTC to 06 UTC each day). Then a forecast for Day+1 that is issued at 03 UTC on \n",
+    "Day+0 will be a 2-ahead forecast, since Day+0 and Day+1 accumulations must be observed before\n",
+    "the forecast can be verified. On the other hand, a forecast for Day+1 issued at 09 UTC on\n",
+    "Day+0 will be a 1-step ahead forecast. \n",
     "\n",
     "For our synthetic example, let's assume that `diff` is the difference in MSE for\n",
     "maximum temperature forecasts. Let's assume that there will be only two maximum temperature\n",
-    "observation observed before the lead day 1 forecast, so the lead day 1 forecast is \n",
+    "observations observed before the lead day 1 forecast, so the lead day 1 forecast is \n",
     "considered a 2-step ahead forecast, a lead day 2 forecast is considered a 3-step ahead\n",
-    "forecast etc.\n",
+    "forecast, and so on.\n",
     "\n",
-    "We need to add `h` coords to `diff`, our timeseries of differences in MSE."
+    "The value of `h` for each timeseries in the array needs to be specified in one of the sets of coordinates. We will add `h` coords to `diff`, our timeseries of differences in MSE."
    ]
   },
   {
@@ -584,18 +584,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In the output above you'll see\n",
     "\n",
-    " - \"mean\": the mean value for each timeseries, ignoring NaNs\n",
-    "- \"dm_test_stat\": the modified Dibold-Mariano test statistic for each\n",
+    "- \"mean\": the mean value for each timeseries, ignoring NaNs\n",
+    "- \"dm_test_stat\": the modified Diebold-Mariano test statistic for each\n",
     "    timeseries\n",
     "- \"timeseries_len\": the length of each timeseries, with NaNs removed.\n",
     "- \"confidence_gt_0\": the confidence that the mean value of the population is\n",
-    "    greater than zero, based on the specified `statistic_distribution`. In this example, \n",
+    "    greater than zero, based on the specified `statistic_distribution` argument. In this example, \n",
     "    it tells us the confidence that `fcst_b` performed better than `fcst_a` (based on\n",
     "    the MSE) for each lead day.\n",
     "- \"ci_upper\": the upper end point of a confidence interval about the mean at\n",
@@ -603,6 +602,11 @@
     "- \"ci_lower\": the lower end point of a confidence interval about the mean at\n",
     "    specified `confidence_level`.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
