--- a/tutorials/FIRM.ipynb
+++ b/tutorials/FIRM.ipynb
@@ -6,29 +6,28 @@
    "metadata": {},
    "source": [
     "# The FIxed Risk Multicategorical (FIRM) Score\n",
-    "[Taggart, R., Loveday, N. and Griffiths, D., 2022. A scoring framework for tiered warnings and multicategorical forecasts based on fixed risk measures. Quarterly Journal of the Royal Meteorological Society, 148(744), pp.1389-1406.](https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.4266)\n",
+    "The FIRM score is a verification framework for scoring multicategorical forecasts and warnings (Taggart et al. 2022). The framework is tied to pre-defined risk thresholds (e.g., forecast the highest category for which the probability of observing that category or higher exceeds $X$%). \n",
     "\n",
-    "The FIRM score is a scoring/verification framework for multicategorical forecast and warnings. The framework is tied to a risk threshold (or probabilistic decision threshold). This is in contrast to most other verification scores for multicategorical forecasts, where the optimal probability/risk threshold depends on the sample climatological frequency. Many of these other verification scores for multicategorical forecasts would encourage forecasters to over-warn/over-forecast more extreme, rarer events, causing many false alarms, particularly for longer lead days, which would erode the confidence that users have in forecasts.\n",
+    "FIRM factors in the costs and losses associated with being on the wrong side of a decision threshold, and is therefore aligned to forecast *value* (where a missed event is typically more costly than a false alarm). This is in contrast to most other verification scores for multicategorical forecasts, where the optimal probability/risk threshold depends on the sample climatological frequency. Many of these other verification scores encourage excessive over-forecasting of rare events, causing many false alarms (particularly for longer lead days) and eroding users' confidence in the forecasts.\n",
     "\n",
-    "Lower FIRM scores are better (zero is best), similar to how lower MSE scores are better.\n",
+    "Lower FIRM scores are better (zero is best).\n",
     "\n",
     "## How does the FIRM framework work?\n",
     "A user needs to specify the following:\n",
     "\n",
-    "1. An increasing sequence of category thresholds.\n",
-    "2. The weights for the relative importance of each decision threshold. \n",
-    "3. The risk threshold. This is a value between 0 and 1 and indicates the cost of a miss relative to the cost of a false alarm. \n",
-    "4. Optional: A discount distance parameter. There is the opportunity to set the discount the penalty for near misses and near false alarms. \n",
+    "1. An increasing sequence of category thresholds\n",
+    "2. The weights for the relative importance of each decision threshold \n",
+    "3. The risk threshold, a value between 0 and 1 that indicates the cost of a miss relative to the cost of a false alarm \n",
+    "4. Optional: A discount distance parameter, an opportunity to discount the penalty for near misses and near false alarms \n",
     "\n",
     "## Example\n",
-    "Let's say that we have a wind warning service that has three categories; no warning, gale warning and storm warning. This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs no warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. The risk threshold of the service is that the cost of a miss to the cost of a false alarm is equal to 0.7. To optimise the expected FIRM score, one must forecast the highest category that has at least a 30% chance of occuring. This is calculated by $P (event) \\ge 1 - risk \\: threshold$. In this wind warning service we don't discount the penalty for near misses or near fale alarms.\n",
+    "Let's say that we have a wind warning service that has three categories; no warning, gale warning and storm warning. This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs no warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. The risk threshold of the service, i.e. the cost of a miss to the cost of a false alarm, is equal to 0.7. To optimise the expected FIRM score, one must forecast the highest category for which the probability of observing that category or higher has greater than 30% chance of occurring. This is calculated by $P (event) \\ge 1 - risk \\: threshold$. In this wind warning service we don't discount the penalty for near misses or near false alarms.\n",
     "\n",
     "To summarise our FIRM framework parameters:\n",
     "\n",
     "1. Our category thresholds values are `[34, 48]`\n",
     "2. Our threshold weights are `[2, 1]`\n",
     "3. Our risk threshold is `0.7`\n",
-    "\n",
     "\n",
     "Our scoring matrix based on these parameters is\n",
     "\n",
@@ -41,10 +40,12 @@
     "where the column headers correspond to the observed category and the row headers correspond to the forecast category. We can see that:\n",
     "\n",
     "- There is no penalty along the diagonal if you forecast the correct category.\n",
-    "- You get a bigger penalty for missing an event than a false alarm. This is due to the risk threshold being set at `0.7`.\n",
+    "- You get a bigger penalty for missing an event than for issuing a false alarm. This is due to the risk threshold being set at `0.7`.\n",
     "- You get twice the penalty for forecasting none and observing gales compared to forecasting gales and observing storm force conditions due to the threshold weights. These two penalties sum together when being out by two categories (i.e., forecasting None and observing storm force conditions).\n",
     "\n",
-    "For a detailed explanation of the calculations and various extensions, please read the [paper](https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.4266)."
+    "For a detailed explanation of the FIRM calculations and various extensions, please see\n",
+    "\n",
+    "Taggart, R., Loveday, N. and Griffiths, D., 2022. A scoring framework for tiered warnings and multicategorical forecasts based on fixed risk measures. *Quarterly Journal of the Royal Meteorological Society*, 148, 1389-1406. [https://doi.org/10.1002/qj.4266](https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.4266)."
    ]
   },
   {
@@ -54,9 +55,9 @@
    "source": [
     "## Python example\n",
     "\n",
-    "Let's verify two synthetic wind warning services based on the hypothetical service listed above. Forecast A's wind forecasts are unbiased compared to observations. Forecast B's wind forecasts have been biased up by 5%. This is to see if we can improve our forecast score by biasing up our forecasts slightly since the forecast service directive is to forecast the highest category that has at least a 30% chance of occuring.\n",
+    "Let's verify two synthetic wind warning services based on the hypothetical service listed above, where the forecast service directive is to forecast the highest category that has at least a 30% chance of occuring. Forecast A's wind forecasts are unbiased compared to observations. Forecast B is the same as Forecast A but with the wind values increased by 5%. We want to see if we can improve our forecast score by slightly over-warning in Forecast B. \n",
     "\n",
-    "We assume that our categorical warning service is derived by converting continuous obs/forecasts into our 3 categories. This is handled within the implementation of `FIRM` within `scores`."
+    "We assume that our categorical warning service is derived by converting continuous observations and forecasts into our 3 categories. This is handled within the implementation of `FIRM` within `scores`."
    ]
   },
   {
@@ -926,9 +927,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the FIRM score from Forecast B was lower (better) than Forecast A. This is because we biased our forecast up slightly to align better with the service directive of \"forecast the highest category that has at least a 30% chance of occuring\".\n",
+    "We can see that the FIRM score from Forecast B was lower (better) than Forecast A. This is because we biased our forecast up slightly to align better with the service directive of \"forecast the highest category that has at least a 30% chance of occuring\". Although the number of false alarms increased for Forecast B, the FIRM score was improved by the reduction in (costlier) missed events. \n",
     "\n",
-    "We can also see the overforecast and underforecast penalties in the output. This allows ups to see the relative contribution to the overall scores due to over/under forecasting.\n"
+    "We can also see the overforecast and underforecast penalties in the output. This shows the relative contributions to the overall FIRM score from over- and under-forecasting. It can be helpful in adjusting the forecast strategy.\n"
    ]
   },
   {
@@ -938,8 +939,8 @@
    "source": [
     "## Further extensions\n",
     "- Test the impact of varying the risk threshold\n",
-    "- Solve for the optimal way to bias the forecasts to improve the verification score\n",
-    "- Test out the impact of the discount distance parameter\n",
+    "- Solve for the optimal way to bias the forecasts to optimize the verification score\n",
+    "- Test the impact of the discount distance parameter\n",
     "- Explore some of the extensions in the [FIRM paper](https://rmets.onlinelibrary.wiley.com/doi/full/10.1002/qj.4266)"
    ]
   }
