--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -7,15 +7,20 @@
    "source": [
     "# Tutorial One - Data Preparation\n",
     "\n",
-    "This tutorial will give an overview of two methods of preparing sample data for use in the tutorial notebooks which demonstrate the use of each scoring function. The result of this tutorial will be two files - \"forecast_grid.nc\" and \"analysis_grid\".nc. The two methods covered will be (a) downloaded data from the Austration National Computational Infrastructure, and (b) synthetic data. \n",
+    "This tutorial gives an overview of two methods of preparing sample data for use in the tutorial notebooks demonstrating the use of each scoring function. The result of this tutorial will be two files - \"forecast_grid.nc\" and \"analysis_grid.nc\". The two methods covered will be \n",
     "\n",
-    "Numerical weather prediction data is large in size, and comes in many formats and structures. Common structures will include:\n",
+    "1. data download from the Austration National Computational Infrastructure, \n",
+    "2. generation of synthetic data. \n",
+    "\n",
+    "Weather prediction data is typically large in size, and comes in many formats and structures. Common structures will include:\n",
     "\n",
     " - a single value for a prediction such as predicted maximum temperature (e.g. \"The forecast for your town tomorrow is a maximum of 25 degrees\"); \n",
     " - a data array representing that value across a geographical area (such as a region, a country or the whole planet); \n",
     " - a data array representing multiple possible predicted values (arising from ensemble predictions), or an expected value and confidence intervals. \n",
-    "  \n",
-    "The data in these tutorials will start with typical model data outputs and ensembles. This will be made clearer with an example.\n",
+    "\n",
+    "There is often also a time dimension to the data.\n",
+    "\n",
+    "The data in the `scores` tutorials starts with typical numerical model data outputs and ensembles. This will be made clearer with an example.\n",
     "\n",
     "Downloaded data is usually covered by a license agreement. You should check the license agreements for the downloaded data in these examples."
    ]
@@ -1132,7 +1137,7 @@
    },
    "outputs": [],
    "source": [
-    "# This is the analysis grid for midnight on the 24th of November\n",
+    "# This is the analysis grid for midnight on the 24th of November 2022.\n",
     "# This represents what happened, four days after the prediction was first made, and can be used to check accuracy\n",
     "analysis.temp_scrn.time.values"
    ]
@@ -1147,7 +1152,7 @@
    "outputs": [],
    "source": [
     "# This data extends from -90 degrees latitude to +90 degrees latitude, and from 0 to 360 degrees longitude.\n",
-    "# There are 1536 points of latitude, and 2048 points on longitude.\n",
+    "# There are 1536 points of latitude, and 2048 points of longitude.\n",
     "print(min(analysis.temp_scrn.lat.values))\n",
     "print(max(analysis.temp_scrn.lat.values))\n",
     "print(len(analysis.temp_scrn.lat.values))\n",
@@ -1165,7 +1170,7 @@
     "\n",
     "Synthetic data is easy to generate quickly, can be customised to focus on a specific example, and doesn't require any time to download. However, it can be less realistic and therefore may not capture the complexity of a real-world situation.\n",
     "\n",
-    "This method will generate an array of 240 x 1536 x 2048, closely matching the domain of the ACCESS-G model and write this to a file called \"forecast_grid.nc\". It will then generate another array of 1x1536x2048 and write this to a file called \"analysis_grid.nc\". These files can then substitute to a greater or lesser degree for the real-world data shown in the previous step. There may be some differences but it should be sufficient for demonstration purposes."
+    "This method will generate an array of 240 x 1536 x 2048, closely matching the domain of the Australian ACCESS-G model, and write this to a file called \"forecast_grid.nc\". It will then generate another array of 1x1536x2048 and write this to a file called \"analysis_grid.nc\". These files can then substitute to a greater or lesser degree for the real-world data shown in the previous step. There may be some differences but it should be sufficient for demonstration purposes."
    ]
   },
   {
@@ -2988,14 +2993,6 @@
     "forecast.temp_scrn[24*4-1].plot(cmap=matplotlib.pyplot.cm.Blues, vmin=22, vmax=27)\n",
     "forecast.temp_scrn[24*4-1].mean()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "997e78d1-91ff-4435-9707-f523a487f20d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3014,7 +3011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
