--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -9,8 +9,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3023fa66-1f96-4961-afbc-c4cf91fe232a",
+   "metadata": {},
+   "source": [
+    "The Flip-Flop Index quantifies the stability of a forecast without penalising a trend toward more accurate values at shorter lead times. The Flip-Flop Index has the same units as the forecast, with smaller values indicating greater stability (fewer \"flip-flops\"). The Flip-Flop Index cannot be used to verify a forecast. Indeed, it does not use the verifying observation in its calculation. However, it describes an (arguably important) characteristic of a sequence of forecasts for an event. \n",
+    "\n",
+    "Read about the Flip-Flop Index at:  \n",
+    "\n",
+    "- Griffiths D. et al. (2019). Flip-Flop Index: Quantifying Revision Stability for Fixed-Event Forecasts, \n",
+    "*Meteorological Applications*, 26, 30-35. [https://doi.org/10.1002/met.1732](https://doi.org/10.1002/met.1732)   \n",
+    "- Griffiths D. et al. (2021). Circular Flip-Flop Index: quantifying revision stability of forecasts of direction, *Journal of Southern Hemisphere Earth Systems Science*, 71, 266–271. [https://doi.org/10.1071/ES21010](https://doi.org/10.1071/ES21010)\n",
+    "\n",
+    "The two functions demonstrated here are `flip_flop_index` which calculates the index for individual forecast revision series, and `flip_flop_index_proportion_exceeding` which summarises the Flip-Flop Index values over many forecast revision series by reporting the frequency with which it exceeded values of interest."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "91abca47",
    "metadata": {
     "ExecuteTime": {
@@ -30,25 +46,6 @@
     "\n",
     "from scores.continuous import mse\n",
     "from scores.continuous import flip_flop_index_proportion_exceeding, flip_flop_index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3023fa66-1f96-4961-afbc-c4cf91fe232a",
-   "metadata": {},
-   "source": [
-    "The Flip-Flop Index is a way of quantifying the stability of a forecast without penalising a trend. A trend wis common, starting with a climatological forecast at longer lead-times and progressing to a more accurate, and possibly extreme, forecast at shorter lead times. The Flip-Flop Index has the same units as the forecast, with smaller values indicating greater stability. The Flip-Flop Index cannot be used to verify a forecast. Indeed, it does not use the verifying observation in its calculation. However, it describes an (arguably important) characteristic of a sequence of forecasts for an event. \n",
-    "\n",
-    "Read about the index at:  \n",
-    "Griffiths et al. (2019) \"Flip-Flop Index: Quantifying Revision Stability for Fixed-Event Forecasts\",  \n",
-    "*Meteorological Applications, 26(1), pp. 30-35.* [https://doi.org/10.1002/met.1732](https://doi.org/10.1002/met.1732)\n",
-    "\n",
-    "And at:  \n",
-    "Griffiths D et al. (2021) \"Circular Flip-Flop Index: quantifying revision stability of  forecasts of direction\",  \n",
-    "*Journal of Southern Hemisphere Earth Systems Science 71(pp. 3), 266–271*  \n",
-    "[https://doi.org/10.1071/ES21010](https://doi.org/10.1071/ES21010)\n",
-    "\n",
-    "The two functions showcased here are `flip_flop_index` which calculates the index for individual forecast revision series, and `flip_flop_index_proportion_exceding` which can be used to summarise the Flip-Flop Index values over many forecast revision series by reporting the frequency with which the Flip-Flop Index was observed to exceed values of interest."
    ]
   },
   {
@@ -91,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3917ba0e-6db2-4ef5-b268-20f1fa8884da",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1478,7 @@
     }
    ],
    "source": [
-    "# The Flip-Flop Index of 1.8 for fcsta quantifies the lack of stability.\n",
+    "# The Flip-Flop Index of 1.8 for the noisy forecast quantifies the lack of stability.\n",
     "flip_flop_index(unstable_fcst, \"lead_day\")"
    ]
   },
@@ -1875,7 +1872,7 @@
     }
    ],
    "source": [
-    "# The Flip-Flop Index for fcstb is 0, reflecting no flip-flopping.\n",
+    "# The Flip-Flop Index for the stable forecast is 0, reflecting no flip-flopping.\n",
     "flip_flop_index(stable_fcst, \"lead_day\")"
    ]
   },
@@ -1911,12 +1908,12 @@
     "fcst1 = fcst1 * obs\n",
     "fcst2 = fcst1.copy()\n",
     "\n",
-    "# So, fcst1 is 70,000 forecasts, with 10,000 forecast revision sequences.\n",
+    "# fcst1 is 70,000 forecasts, with 10,000 forecast revision sequences.\n",
     "# Each forecast revision sequence is predicting one specific obeservation.\n",
     "# Similarly for fcst2.\n",
     "\n",
     "# Create some noise to add to the forecasts to make them interesting and more realistic.\n",
-    "# The noise increases with lead-day reflecting less accurate forecasts at longer lead-days.\n",
+    "# The noise increases with lead-day reflecting less accurate forecasts at longer lead days.\n",
     "noise = skewnorm.rvs(4, size=(1, 100, 100))\n",
     "noise_for_fcst1 = noise.copy()\n",
     "noise_for_fcst2 = noise.copy()\n",
@@ -3251,7 +3248,7 @@
     }
    ],
    "source": [
-    "# We expect fcst2 to be less stable (have more flip-flopping) that fcst1.\n",
+    "# We expect fcst2 to be less stable (have more flip-flopping) than fcst1.\n",
     "# Calculating the frequency with with the Flip-Flop Index exceeds 1 confirms that\n",
     "# the Flip-Flop Index for exceeds 1 only about 20% of the time for fcst1, but well over 80% of the time for fcst2.\n",
     "# The exact values depend on the random noise generated each time this notebook is run.\n",
@@ -3333,7 +3330,7 @@
    ],
    "source": [
     "# Considering just fcst1, we can compare the Flip-Flop Index of three forecasts in the revision series.\n",
-    "# We see here that the shorter lead-day forecasts Flip-Flop slightly less than the longer range forecasts.\n",
+    "# We see here that the shorter lead-day forecasts flip-flop slightly less than the longer range forecasts.\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 4, 0.1), days123=[1, 2, 3]).days123.plot()\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 4, 0.1), days456=[4, 5, 6]).days456.plot()\n",
     "plt.legend(['lead-days 1, 2, 3', 'lead-days 4, 5, 6'])\n",
@@ -3349,22 +3346,11 @@
    "source": [
     "Next Steps:\n",
     "\n",
-    "Try on some real data of interest.\n",
-    "\n",
-    "Try on some forecasts of direction using the argument `is_angular=True`\n",
-    "\n",
-    "For `flip_flop_index_proportion_exceeding` try the `reduce_dims` or `preserve_dims` to report data conditioned by something of interest. For example, if your data includes `season` or `forecast zone` you can report exceedence values for those.\n",
-    "\n",
-    "It is not appropriate to consider the Flip-Flop Index from forecast revision sequences of different lengths. Do you agree?"
+    "- Try `flip_flop_index` on some real data of interest.\n",
+    "- Try on some forecasts of direction using the argument `is_angular=True`\n",
+    "- For `flip_flop_index_proportion_exceeding` try the `reduce_dims` or `preserve_dims` to report data conditioned by something of interest. For example, if your data includes `season` or `forecast zone` you can report exceedence values for those.\n",
+    "- It is not appropriate to consider the Flip-Flop Index from forecast revision sequences of different lengths. Do you agree?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5447434e-790e-40c0-ab72-6bb98eadb310",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
