--- a/tutorials/Isotonic_Regression_And_Reliability_Diagrams.ipynb
+++ b/tutorials/Isotonic_Regression_And_Reliability_Diagrams.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Isotonic Regression and Reliability Diagrams\n",
     "\n",
-    "First, let's explain the concept of isotonic regression. Isotonic regression is a powerful technique of modelling the relationship between two variables while imposing a specific monotonicity constraint known as isotonicity. This constraint ensures that the relationship between the variables will be either non-decreasing or non-increasing. In simpler terms, isotonic regression seeks to find a piecewise constant function that is either non-decreasing or non-increasing, providing the best fits to the given data points while adhering to the monotonicity constraint. The following plot shows an example of isotonic regression (solid red line) compared to linear regression (dashed green line) on the same data (this image is from https://en.wikipedia.org/wiki/Isotonic_regression)."
+    "Isotonic regression is a powerful technique of modelling the relationship between two variables while imposing a specific monotonicity constraint known as isotonicity. This constraint ensures that the relationship between the variables will be either non-decreasing or non-increasing. In simpler terms, isotonic regression seeks to find a piecewise constant function that is either non-decreasing or non-increasing, providing the best fits to the given data points while adhering to the monotonicity constraint. The following plot shows an example of isotonic regression (solid red line) compared to linear regression (dashed green line) on the same data (this image is from https://en.wikipedia.org/wiki/Isotonic_regression)."
    ]
   },
   {
@@ -20,13 +20,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, let's see how isotonic regression can help us to create an improved reliability diagram. \n",
     "\n",
-    "Now, let's see how isotonic regression can help us to create an improved reliability diagram:\n",
+    "Reliability diagrams are commonly used as a tool to investigate the calibration across probabilistic thresholds. Dimitriadis et al. (2021) showed that the traditional approach of binning-and-counting, where the forecast probabilities are binned and the conditional non-exceedance probability of respective outcomes is plotted versus the midpoint of the bin, used for creating reliability diagrams is sensitive to the choice of bins. They proposed that the use of Consistent, Optimal, Reproducible, and Pool-adjacent-violators (PAV) algorithm (CORP) based reliability diagrams addresses the binning issue. CORP approach uses nonparametric isotonic regression and PAV algorithm to generate non-decreasing empirical reliability curves that are optimal in mathematically well-defined ways.\n",
     "\n",
-    "[Dimitriadis, T., Gneiting, T., & Jordan, A. I. (2021). Stable reliability diagrams for probabilistic classifiers. Proceedings of the National Academy of Sciences, 118(8).](https://www.pnas.org/doi/10.1073/pnas.2016191118)\n",
-    "\n",
-    "Reliability diagrams are commonly used as a tool to investigate the calibration across probabilistic thresholds. Dimitriadis et al. (2021) showed that the traditional approach of binning-and-counting, where the forecast probabilities are binned, and the conditional non-exceedance probability of respective outcomes is plotted versus the midpoint of the bin,  used for creating reliability diagrams is sensitive to the choice of bins. They proposed that the use of Consistent, Optimal, Reproducible, and Pool-adjacent-violators (PAV) algorithm (CORP) based reliability diagrams addresses the binning issue. CORP approach uses nonparametric isotonic regression and PAV algorithm to generate non-decreasing empirical reliability curves that are optimal in mathematically well-defined ways.\n",
-    "\n",
+    "Dimitriadis, T., Gneiting, T., & Jordan, A. I. (2021). Stable reliability diagrams for probabilistic classifiers. *Proceedings of the National Academy of Sciences*, 118. [https://doi.org/10.1073/pnas.2016191118](https://www.pnas.org/doi/10.1073/pnas.2016191118)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's see how we can use `isoreg` module in `scores` to calculate PAV-calibrated probability and then use them to create the CORP reliability diagram."
    ]
   },
@@ -45,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this tutorial, we generate synthetic forecast and observation data. To keep it simple, assume that these data are single-value mean forecasts of temperature and their corresponding observations over 100 locations for a single time (valid time)."
+    "For this tutorial, we generate synthetic forecast and observation data. To keep it simple, assume that these data are single-value forecasts of the expected temperature and their corresponding observations over 100 locations for a single time (valid time)."
    ]
   },
   {
@@ -1795,17 +1799,10 @@
    "source": [
     "Here, we explain how to interpret the reliability diagram.\n",
     "\n",
-    "The reliability diagram shows what would be an optimally re-calibrated forecast value for each forecasted value. As it was mentioned, the re-calibrated curve is derived using isotonic regression that minimises the error score across the set of forecasts based on assumption of isotonicity (i.e., the re-calibrated forecast values cannot decrease as forecasted values increase). In this diagram, x-axis demonstrates the forecast values (here, our synthetic temperature forecasts), and y-axis shows the re-calibrated (regression) values. In reliability diagram, the diagonal line (here displayed by a black dashed line) shows an ideal (well-calibrated) forecast. If a point is above the ideal line, it indicates under-prediction, whereas point below the ideal line indicates over-prediction. Here we also displayed the 95% confidence bands estimated by 100 bootstrapping samples. The confidence bands indicate uncertainty of the re-calibrated values due to sampling uncertainty, and they are particularly important in the case of comparing multiple forecast systems. Moreover, producing the forecast counts `fcst_counts` as an item in the return dictionary of the `isotonic_fit` function allows to create the forecast histogram. Displaying both reliability diagram and forecast histogram in one plot is a common practice in weather forecasting that provides a better insight into the calibration of the forecasts.\n",
+    "The reliability diagram shows what would be an optimally re-calibrated forecast value for each forecasted value. The re-calibrated curve is derived using isotonic regression that minimises the error score across the set of forecasts based on assumption of isotonicity (i.e., the re-calibrated forecast values cannot decrease as forecasted values increase). In this diagram, x-axis shows the forecast values (here, our synthetic temperature forecasts), and y-axis shows the re-calibrated (regression) values. In reliability diagram, the diagonal line (here displayed by a black dashed line) shows an ideal (well-calibrated) forecast. If a point is above the ideal line, it indicates under-prediction, whereas a point below the ideal line indicates over-prediction. Here we also display the 95% confidence bands estimated by 100 bootstrapping samples. The confidence bands indicate uncertainty of the re-calibrated values due to sampling uncertainty, and they are particularly important in the case of comparing multiple forecast systems. Moreover, producing the forecast counts `fcst_counts` as an item in the return dictionary of the `isotonic_fit` function allows to create the forecast histogram. Displaying both reliability diagram and forecast histogram in one plot is a common practice in weather forecasting that provides a better insight into the calibration of the forecasts.\n",
     "\n",
-    "Please note that in this example, we use isotonic regression for a **single-value mean forecast**, but it can also be used for **probabilistic forecasts**. In the case of single-value mean forecast, as can be seen in this example, users can set `functional='mean'`, and for quantile forecast, the `functional` can be set to `'mean'`. For a probabilistic forecast of a binary event (e.g., probability of at least 5 mm precipitation falling over a 24 hour period), where the forecasts take values on the range [0, 1] and binary observations take values from the set {0,1}, user can specify the `functional` argument as `'mean'` to calculate the isotonic regression. The `functional` argument determines that what is the functional that the forecast is targeting. Therefore, it can be used to find an optimal regression fit in each block, subject to a non-decreasing monotonicity constraint, using the pool adjacent violators (PAV) algorithm."
+    "Please note that in this example, we use isotonic regression for a **single-value mean forecast**, but it can also be used for **probabilistic forecasts**. In the case of single-value mean forecast, as can be seen in this example, users can set `functional='mean'`, and for quantile forecasts, the `functional` can be set to `'quantile'`. For a probabilistic forecast of a binary event (e.g., probability of at least 5 mm precipitation falling over a 24 hour period), where the forecasts take values on the range [0, 1] and binary observations take values from the set {0,1}, user can specify the `functional` argument as `'mean'` to calculate the isotonic regression. The `functional` argument determines that what is the functional that the forecast is targeting. Therefore, it can be used to find an optimal regression fit in each block, subject to a non-decreasing monotonicity constraint, using the pool adjacent violators (PAV) algorithm."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
