--- a/tutorials/Quantile_Loss.ipynb
+++ b/tutorials/Quantile_Loss.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quantile Loss (Score)\n",
+    "# Quantile Loss (Quantile Score)\n",
     "\n",
-    "[Gneiting, T. (2011). Making and evaluating point forecasts, Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
-    "\n",
-    "Quantile loss (score) is a consistent scoring function for an $\\alpha$-quantile forecast, where $\\alpha \\in (0, 1)$. Quantile loss function is also used in Machine Learning, in quantile regression, which focuses on estimating different quantiles of the conditional distributution of the response variable. Please note that quantiles are often referred to as value-at-risk in finance.\n",
+    "The quantile loss (quantile score) is a consistent scoring function for an $\\alpha$-quantile forecast, where $\\alpha \\in (0, 1)$. The quantile loss function is also used in Machine Learning, in quantile regression, which focuses on estimating different quantiles of the conditional distributution of the response variable. In finance, quantiles are often referred to as value-at-risk.\n",
     "\n",
     "The quantile loss function is defined as:\n",
     "\n",
@@ -17,12 +15,13 @@
     "(\\alpha - 1) \\cdot (y - x) & \\text{if } y < x \n",
     "\\end{cases} $$\n",
     "\n",
-    "where $S$ is the scoring function (here quantile loss), $x$ and $y$ are forecast and observation, respectively.\n",
+    "where $S$ is the scoring function (here quantile loss), $x$ and $y$ are forecast and observation, respectively. Lower values of the quantile loss are better.\n",
     "\n",
-    "For more information about quantile loss function, please read [Gneiting, T. (2011)](https://doi.org/10.1198/jasa.2011.r10138).\n",
+    "More information about the quantile loss function can be found in this article:  \n",
     "\n",
+    "- Gneiting, T. (2011). Making and evaluating point forecasts. *Journal of the American Statistical Association*, 106, 746-762. [https://doi.org/10.1198/jasa.2011.r10138](https://doi.org/10.1198/jasa.2011.r10138)\n",
     "\n",
-    "Now let's look at an example where we demonstrate how to use quantile score:"
+    "Now let's look at an example where we demonstrate how to use the quantile score:"
    ]
   },
   {
@@ -41,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, we create two synthetic forecasts and observation data with dimensions of `('lat', 'lon', 'time')`. One forecast systems is better at targeting the median (FCST_50), while the other one is better at targeting the 90th percentile (FCST_90)."
+    "In this example, we create observation data and two synthetic forecasts, all with dimensions of `('lat', 'lon', 'time')`. One forecast system is better at targeting the median (FCST_50), while the other one is better at targeting the 90th percentile (FCST_90)."
    ]
   },
   {
@@ -91,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "Overall GPL score for:\n",
-      " FCST_50 (targeted at 50th percentile):  0.131\n",
+      " FCST_50 (targeted at 50th percentile):  0.127\n",
       " FCST_90 (targeted at 90th percentile): 0.049\n"
      ]
     }
@@ -110,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's use `preserve_dims=['time']` in our calculation:"
+    "Now, let's use `preserve_dims=['time']` in our calculation to get quantile score values for each of the time periods:"
    ]
   },
   {
@@ -123,8 +122,8 @@
      "output_type": "stream",
      "text": [
       "Quantile score values by preserving time dimension\n",
-      " FCST_50 (targeted at 50th percentile):  [0.136 0.125 0.137 0.129 0.129]\n",
-      " FCST_90 (targeted at 90th percentile): [0.049 0.047 0.054 0.048 0.049]\n"
+      " FCST_50 (targeted at 50th percentile):  [0.116 0.125 0.137 0.126 0.13 ]\n",
+      " FCST_90 (targeted at 90th percentile): [0.051 0.046 0.053 0.048 0.048]\n"
      ]
     }
    ],
@@ -142,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please note that user have the option to input an array of weights within `quantile_score` to compute a weighted average score. An example scenario could involve assigning weights to regions based on their population when computing the quantile score. Following is an example of using weights, where we give a larger weights to a few locations (lat, lon)."
+    "Users have the option to input an array of weights within `quantile_score` to compute a weighted average score. An example scenario could involve assigning weights to regions based on their population when computing the quantile score. The following is an example of using weights, where we give larger weights to a few locations (lat, lon)."
    ]
   },
   {
@@ -155,8 +154,8 @@
      "output_type": "stream",
      "text": [
       "GPL scores by preserving 'time' dimension and using an array of weights are:\n",
-      " FCST_50 (targeted at 50th percentile): [0.136 0.125 0.137 0.138 0.142],\n",
-      " FCST_90 (targeted at 90th percentile): [0.049 0.047 0.054 0.053 0.054]\n"
+      " FCST_50 (targeted at 50th percentile): [0.116 0.125 0.137 0.139 0.144],\n",
+      " FCST_90 (targeted at 90th percentile): [0.051 0.046 0.053 0.052 0.052]\n"
      ]
     }
    ],
@@ -194,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
